# Android_MadgWick

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/example/androidmadgwick/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: MadgwickAHRS.h  com_example_androidmadgwick_nativefunction_IMUInterface.h
app/src/main/cpp/src/: MadgwickAHRS.cpp  com_example_androidmadgwick_nativefunction_IMUInterface.cpp
app/src/main/java/com/example/androidmadgwick/: ImuFragment.java  MainActivity.java
app/src/main/java/com/example/androidmadgwick/nativefunction/: IMUInterface.java
app/src/main/res/layout/: activity_main.xml  imufragment.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidmadgwick/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
